[project]
name = "tunalyze"
version = "0.1.0"
description = "About An innovative music analysis tool leveraging Spotify API to provide in-depth insights into track attributes for genre trends, era evolution, and mood-based music exploration. Ideal for music enthusiasts, producers, and marketers seeking data-driven inspiration and strategic decision-making."
authors = [{ name = "hid3xxx", email = " @" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "tunalyze:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tunalyze"]
